--- a/src/app/pages/auth/sign-up/sign-up.page.html
+++ b/src/app/pages/auth/sign-up/sign-up.page.html
@@ -25,6 +25,21 @@
 
             </div>
 
+            <!--=========== Tipo de usuario ===========-->
+
+            <ion-item class="custom-input-box" [class.invalid]="form.controls.tipo.invalid && form.controls.tipo.touched">
+                <ion-select formControlName="tipo" class="custom-select" placeholder="Seleccionar tipo de usuario" interface="popover">
+                  <ion-icon name="person" slot="start"></ion-icon> <!-- Agrega el icono aquí -->
+                  <ion-select-option value="P">Profesor</ion-select-option>
+                  <ion-select-option value="A">Alumno</ion-select-option>
+                </ion-select>
+              </ion-item>
+              
+              <div class="validators" *ngIf="form.controls.tipo.errors && form.controls.tipo.touched">
+                <div *ngIf="form.controls.tipo.errors?.['required']">Debe seleccionar un tipo de usuario</div>
+              </div>
+              
+
             <!--=========== Email ===========-->
 
             <app-custom-input 
