creacion de profile, actualizacion 1.2

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -9,7 +9,7 @@
       <strong>
         {{title}}
       </strong>
-      <div class="admin">MAT STUDIO</div>
+      <div class="admin">INSTITUTO LEMAT</div>
     </ion-title>
   </ion-toolbar>
 </ion-header>
