--- a/src/app/pages/main/home/home.page.html
+++ b/src/app/pages/main/home/home.page.html
@@ -1,4 +1,4 @@
-<app-header title="Registro de Asistencia"></app-header>
+<app-header title="Sesión de Alumno"></app-header>
 
 <ion-content>
 
@@ -14,7 +14,7 @@
 
       <ion-button (click)="scan()" mode="ios" class="submit" type="submit">
         ESCANEAR
-        <ion-icon slot="end" name="finger-print-sharp"></ion-icon>
+        <ion-icon slot="end" name="qr-code-outline"></ion-icon>
       </ion-button>
 
     </form>
@@ -22,6 +22,7 @@
   </div>
 
   <div class="ion-text-center">
+    <div style="margin-top: 80px;"></div>
     <ion-button (click)="signOut()"  class="ion-margin">
       Cerrar Sesión
       <ion-icon slot="start" name="person"></ion-icon>
