--- a/src/app/pages/main/profile/profile.page.html
+++ b/src/app/pages/main/profile/profile.page.html
@@ -1,13 +1,37 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>profile</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header title="Sesión de Profesor"></app-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">profile</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+
+  <div class="d-flex-center">
+
+    <form [formGroup]="form" class="auth-form" (ngSubmit)="submit()" (keypress.enter)="submit()">
+
+      <app-logo></app-logo>
+
+      <div style="margin-top: 60px;"></div>
+
+
+      <p class="ion-text-center">Genera tu codigo QR para que tus alumnos se registren</p>
+
+
+
+      <ion-button (click)="scan()" mode="ios" class="submit" type="submit">
+        GENERAR
+        <ion-icon slot="end" name="qr-code-outline"></ion-icon>
+      </ion-button>
+
+    </form>
+
+  </div>
+
+  <div class="ion-text-center">
+    <div style="margin-top: 80px;"></div>
+
+    <ion-button (click)="signOut()"  class="ion-margin">
+      Cerrar Sesión
+      <ion-icon slot="start" name="person"></ion-icon>
+    </ion-button>
+  </div>
+
+
 </ion-content>
