--- a/src/app/shared/components/logo/logo.component.html
+++ b/src/app/shared/components/logo/logo.component.html
@@ -1,4 +1,5 @@
-<ion-icon class="shield-icon" color="primary" name="shield-outLine"></ion-icon>
+<ion-icon class="shield-icon" color="primary" name="school-outline"></ion-icon>
 <ion-text color="primary">
-  <h1><strong>MAT STUDIO</strong> App</h1>
+  <h1><strong>LEMAT</strong> App</h1>
 </ion-text>
+
