QR generator complete

--- a/src/app/pages/main/home/home.page.html
+++ b/src/app/pages/main/home/home.page.html
@@ -8,11 +8,13 @@
 
       <app-logo></app-logo>
 
+      <div style="margin-top: 60px;"></div>
+
       <p class="ion-text-center">Para registar tu asistencia escanea el codigo QR</p>
 
+      <div style="margin-top: 40px;"></div>
 
-
-      <ion-button (click)="scan()" mode="ios" class="submit" type="submit">
+      <ion-button (click)="scan()" mode="ios" class="submit" type="submit" color="secondary">
         ESCANEAR
         <ion-icon slot="end" name="qr-code-outline"></ion-icon>
       </ion-button>
