--- a/src/app/pages/main/profile/profile.page.html
+++ b/src/app/pages/main/profile/profile.page.html
@@ -1,4 +1,7 @@
-<app-header title="Sesión de Profesor"></app-header>
+<!-- Agrega este import al inicio del archivo si aún no lo tienes -->
+<!-- <app-header title="Sesión de Profesor"></app-header> -->
+
+<app-header [title]="'Sesión de Profesor'"></app-header>
 
 <ion-content>
 
@@ -10,44 +13,45 @@
 
       <div style="margin-top: 60px;"></div>
 
-
-      <p class="ion-text-center">Genera tu codigo QR para que tus alumnos se registren</p>
+      <p class="ion-text-center">Genera tu código QR para que tus alumnos se registren</p>
 
       <div style="margin-top: 40px;"></div>
 
-      <form [formGroup]="form" (ngSubmit)="submit()">
+      <!-- Lista desplegable de materias -->
+
+      <ion-item class="custom-input-box"
+        [class.invalid]="form.controls.materia.invalid && form.controls.materia.touched">
+        <ion-select formControlName="materia" class="custom-select" placeholder="Seleccione una materia"
+          interface="popover">
+          <ion-select-option value="Matemáticas">Matemáticas</ion-select-option>
+          <ion-select-option value="Lenguaje">Lenguaje</ion-select-option>
+          <ion-select-option value="Historia">Historia</ion-select-option>
+          <!-- Agrega más opciones según las materias que desees -->
+        </ion-select>
+      </ion-item>
+
+      <div style="margin-top: 20px;"></div>
+
+      <!-- Botón para generar el código QR -->
+      <ion-button made="ios" class="submit" type="button" (click)="generateQRCode()"
+        [disabled]="isGeneratingQR || form.controls.materia.invalid">
+        Genera tu Código QR</ion-button>
+
+      <!-- Código QR generado -->
+      <div *ngIf="qrCodeData">
+        <img [src]="qrCodeData" alt="Código QR">
+
+        <!-- Botón para ver el registro de asistencia -->
+        <ion-button class="ver-asistencia" (click)="verRegistroAsistencia()">
+          Ver Registro de Asistencia
+        </ion-button>
+
+      </div>
+
+      <div style="margin-top: 30px;"></div>
 
 
-        <!-- Lista desplegable de materias -->
-    
-        <ion-item class="custom-input-box"
-          [class.invalid]="form.controls.materia.invalid && form.controls.materia.touched">
-          <ion-select formControlName="materia" class="custom-select" placeholder="Seleccione una materia"
-            interface="popover">
-            <ion-select-option value="Matemáticas">Matemáticas</ion-select-option>
-            <ion-select-option value="Lenguaje">Lenguaje</ion-select-option>
-            <ion-select-option value="Historia">Historia</ion-select-option>
-            <!-- Agrega más opciones según las materias que desees -->
-          </ion-select>
-        </ion-item>
- 
 
-        <div style="margin-top: 20px;"></div>
-
-        <!-- Botón para generar el código QR -->
-        <ion-button made="ios" class="submit" type="submit" (click)="generateQRCode()" [disabled]="isGeneratingQR || form.controls.materia.invalid">
-          Generar Código QR</ion-button>
-
-        <!-- Código QR generado -->
-        <div *ngIf="qrCodeData">
-          <img [src]="qrCodeData" alt="Código QR">
-        </div>
-
-      </form>
-
-      <div style="margin-top: 100px;"></div>
-
-      <div style="margin-top: 80px;"></div>
       <ion-button (click)="signOut()" class="ion-margin">
         Cerrar Sesión
         <ion-icon slot="start" name="person"></ion-icon>
