test final con mensaje en consola y android

--- a/src/app/pages/main/ver-asistencia/ver-asistencia.page.html
+++ b/src/app/pages/main/ver-asistencia/ver-asistencia.page.html
@@ -1,27 +1,28 @@
+<!-- En tu ver-asistencia.page.html -->
 <app-header backButton="/main/profile" [title]="'Registro de Asistencia'"></app-header>
 
-
 <ion-content>
-    <ion-grid>
-      <ion-row class="header">
-        <ion-col>Alumno</ion-col>
-        <ion-col>Hora de llegada</ion-col>
+  <ion-grid>
+    <ion-row class="header">
+      <ion-col>Alumno</ion-col>
+      <ion-col>Hora de llegada</ion-col>
+      <ion-col>Materia</ion-col>
+    </ion-row>
+
+    <ng-container *ngIf="asistencia && asistencia.length > 0; else noDataPlaceholder">
+      <ion-row *ngFor="let item of asistencia">
+        <ion-col>{{ item.alumno }}</ion-col>
+        <ion-col>{{ item.tiempo }}</ion-col>
+        <ion-col>{{ item.materia }}</ion-col>
       </ion-row>
-  
-      <ng-container *ngIf="asistencia && asistencia.length > 0; else noDataPlaceholder">
-        <ion-row *ngFor="let asistenciaItem of asistencia">
-          <ion-col>{{ asistenciaItem.alumno }}</ion-col>
-          <ion-col>{{ asistenciaItem.horaLlegada }}</ion-col>
-        </ion-row>
-      </ng-container>
-  
-      <ng-template #noDataPlaceholder>
-        <ion-row>
-          <ion-col>
-            <div class="no-data-message">No hay datos disponibles.</div>
-          </ion-col>
-        </ion-row>
-      </ng-template>
-    </ion-grid>
-  </ion-content>
-  
+    </ng-container>
+
+    <ng-template #noDataPlaceholder>
+      <ion-row>
+        <ion-col>
+          <div class="no-data-message">No hay datos disponibles.</div>
+        </ion-col>
+      </ion-row>
+    </ng-template>
+  </ion-grid>
+</ion-content>
